<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_image"
        android:visibility="visible"
        tools:context=".HintsActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"
            android:layout_height="233dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/styled_image_views"
            android:contentDescription="@string/image_description"/>

        <TextView
            android:id="@+id/displayName"
            android:layout_width="182dp"
            android:layout_height="58dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/display_vehicle_name"
            android:textSize="18sp"
            android:visibility="visible"
            android:background="@drawable/styled_spinner"/>

        <EditText
            android:id="@+id/userAnswer"
            android:layout_width="300dp"
            android:layout_height="49dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/displayName"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_a_character_text"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:background="@drawable/styled_spinner"/>

        <TextView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userAnswer"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/display_feedback"
            android:textSize="18sp"
            android:textStyle="italic"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/correctAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/feedback"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/correct_answer"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="90dp"
            android:layout_height="39dp"
            android:layout_below="@+id/instruction"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/styled_countdown"
            android:gravity="center"
            android:text="@string/countdown_text"
            android:textColor="#00FF00"
            android:textSize="18sp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="25dp"
            android:background="@drawable/styled_spinner"
            android:onClick="submit"
            android:text="@string/submit_button_text"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/feedback"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/instruction_text4"
            android:textColor="#96AC6D"
            android:textStyle="bold|italic"/>

    </RelativeLayout>

</ScrollView>