<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_image"
        tools:context=".IdentifyCarImageActivity">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="270dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="67dp"
            android:layout_marginLeft="67dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/styled_image_views"
            android:contentDescription="@string/image_description"
            android:onClick="image1Click"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="270dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="67dp"
            android:layout_marginLeft="67dp"
            android:layout_marginTop="161dp"
            android:background="@drawable/styled_image_views"
            android:contentDescription="@string/image_description"
            android:onClick="image2Click"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="270dp"
            android:layout_height="125dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="67dp"
            android:layout_marginLeft="67dp"
            android:layout_marginTop="302dp"
            android:background="@drawable/styled_image_views"
            android:contentDescription="@string/image_description"
            android:onClick="image3Click"/>

        <TextView
            android:id="@+id/displayBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imageView3"
            android:layout_marginTop="10dp"
            android:text="@string/display_brand_text"
            android:textColor="#CDDC39"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/displayBrand"
            android:layout_marginTop="50dp"
            android:text="@string/display_feedback"
            android:textSize="18sp"
            android:textStyle="italic"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="90dp"
            android:layout_height="39dp"
            android:layout_below="@+id/instruction"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/styled_countdown"
            android:gravity="center"
            android:text="@string/countdown_text"
            android:textColor="#00FF00"
            android:textSize="18sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/displayBrand"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/instruction_text3"
            android:textColor="#96AC6D"
            android:textStyle="bold|italic"/>

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="20dp"
            android:background="@drawable/styled_spinner"
            android:onClick="toNext"
            android:text="@string/next_button"
            android:textAllCaps="false"/>

    </RelativeLayout>

</ScrollView>