<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_image"
        tools:context=".DisplayImageActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"
            android:layout_height="241dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:background="@drawable/styled_image_views"
            android:contentDescription="@string/image_description"/>

        <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/styled_spinner"
            android:gravity="center"
            android:popupBackground="@drawable/styled_popup_background"
            android:scrollbarStyle="insideOverlay"
            android:spinnerMode="dropdown"/>

        <TextView
            android:id="@+id/selected_brand"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/styled_spinner"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selected_brand"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/display_feedback"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="italic"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/textView_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instruction"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/correct_answer"
            android:textSize="18sp"
            android:visibility="invisible"
            android:animateLayoutChanges="true"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="90dp"
            android:layout_height="39dp"
            android:layout_below="@+id/textView_response"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/styled_countdown"
            android:gravity="center"
            android:text="@string/countdown_text"
            android:textColor="#00FF00"
            android:textSize="18sp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/button_identify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/styled_spinner"
            android:onClick="onItemSelected"
            android:text="@string/identify_button_text"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/textView_answer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/instruction_text2"
            android:textColor="#96AC6D"
            android:textStyle="bold|italic"/>

    </RelativeLayout>

</ScrollView>